--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "debounce": "^1.2.1",
-    "nhaccuatui-api-full": "^1.0.3",
+    "nhaccuatui-api-full": "^1.0.7",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
@@ -20,7 +20,8 @@
     "react-scripts": "4.0.3",
     "sass": "^1.44.0",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "zingmp3-api": "^1.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
