--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "aws-sdk": "^2.1048.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "debounce": "^1.2.1",
