--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "debounce": "^1.2.1",
+    "dotenv": "^10.0.0",
     "nhaccuatui-api-full": "^1.0.7",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
@@ -21,8 +22,7 @@
     "react-scripts": "4.0.3",
     "sass": "^1.44.0",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.1.2",
-    "zingmp3-api": "^1.0.10"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
